--- a/LogSimGui/src/logsim/view/Frame.form
+++ b/LogSimGui/src/logsim/view/Frame.form
@@ -92,16 +92,16 @@
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="stateLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="328" max="32767" attributes="0"/>
+              <EmptySpace pref="365" max="32767" attributes="0"/>
           </Group>
           <Component id="stepBtn" alignment="0" pref="480" max="32767" attributes="0"/>
-          <Component id="circuitView1" alignment="0" max="32767" attributes="0"/>
+          <Component id="circuitView" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <Component id="circuitView1" max="32767" attributes="0"/>
+              <Component id="circuitView" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="stepBtn" min="-2" pref="29" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -132,7 +132,10 @@
         <Property name="text" type="java.lang.String" value="..."/>
       </Properties>
     </Component>
-    <Container class="logsim.view.CircuitView" name="circuitView1">
+    <Container class="logsim.view.CircuitView" name="circuitView">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new logsim.view.CircuitView(this)"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
